[project]
name = "tool-registry-module"
version = "0.1.0"
description = "Advanced tool registration system for Anthropic Claude integration with automatic schema generation and validation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Claude Code Assistant", email = "noreply@anthropic.com"}
]
license = {text = "MIT"}
keywords = ["anthropic", "claude", "tools", "schema", "validation", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.52.2"]
openai = ["openai>=1.0.0"] 
mistral = ["mistralai>=0.4.0"]
bedrock = ["boto3>=1.34.0"]
gemini = ["google-generativeai>=0.3.0"]
dev = ["ruff>=0.4.0"]
all = [
    "anthropic>=0.52.2",
    "openai>=1.0.0", 
    "mistralai>=0.4.0",
    "boto3>=1.34.0",
    "google-generativeai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tool-registry-module"
Repository = "https://github.com/yourusername/tool-registry-module"
Documentation = "https://github.com/yourusername/tool-registry-module#readme"
"Bug Tracker" = "https://github.com/yourusername/tool-registry-module/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool_registry_module"]
